<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <DropDownPreference
        app:defaultValue="A20_US"
        app:key="KEY_IMPORT_GAME_VERSION"
        app:title="@string/action_game_version"/>
    <Preference
        app:fragment="com.perrigogames.life4trials.activity.SettingsActivity$UserInfoSettingsFragment"
        app:title="@string/edit_user_info"/>
    <Preference
        app:key="KEY_IMPORT_DATA"
        app:title="@string/import_manager_data"/>
    <CheckBoxPreference
        app:key="KEY_IMPORT_SKIP_DIRECTIONS"
        app:title="@string/import_skip_directions"/>
    <Preference
        app:key="KEY_IMPORT_VIEW_LIST"
        app:title="@string/action_view_blocklist"/>

    <Preference
        app:fragment="com.perrigogames.life4trials.activity.SettingsActivity$TrialSettingsFragment"
        app:title="@string/trial_settings"/>

    <Preference
        app:fragment="com.perrigogames.life4trials.activity.SettingsActivity$ClearDataFragment"
        app:title="@string/clear_data"/>

    <PreferenceCategory app:title="@string/help_and_feedback">
        <Preference
            app:key="KEY_SHOP"
            app:summary="@string/description_shop"
            app:title="@string/action_shop"/>
        <Preference
            app:key="KEY_FEEDBACK"
            app:summary="@string/send_feedback_summary"
            app:title="@string/send_feedback"/>
        <Preference
            app:fragment="com.perrigogames.life4trials.activity.SettingsActivity$DebugSettingsFragment"
            app:key="KEY_DEBUG"
            app:title="Debug Settings"/>
        <Preference
            app:key="KEY_CREDITS"
            app:title="@string/credits"/>
    </PreferenceCategory>
</PreferenceScreen>
