<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.perrigogames.life4.activity.firstrun.FirstRunInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_padding_large"
            android:layout_marginEnd="@dimen/content_padding_large"
            android:fontFamily="@font/avenir"
            android:gravity="center"
            android:lines="1"
            android:text="@string/welcome_to"
            android:textSize="@dimen/text_giant"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@id/image_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <ImageView
            android:id="@+id/image_app_icon"
            android:layout_width="@dimen/first_run_icon_width"
            android:layout_height="0dp"
            android:src="@drawable/life4_logo_invert"
            app:layout_constraintBottom_toTopOf="@id/text_greetings"
            app:layout_constraintDimensionRatio="H,5:3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <TextView
            android:id="@+id/text_greetings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_padding_large"
            android:layout_marginEnd="@dimen/content_padding_large"
            android:layout_marginBottom="@dimen/content_padding_huge"
            android:gravity="center"
            android:text="@string/life4_intro_info_greeting"
            android:textSize="@dimen/text_med"
            app:layout_constraintBottom_toTopOf="@id/field_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_app_icon"/>

        <EditText
            android:id="@+id/field_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/content_padding_huge"
            android:layout_marginTop="@dimen/content_padding_large"
            android:layout_marginEnd="@dimen/content_padding_huge"
            android:hint="@string/field_hint_dancer_name"
            android:importantForAutofill="no"
            android:inputType="text"
            android:nextFocusDown="@id/field_rival_code"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/field_rival_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_greetings" />

        <ProgressBar
            android:id="@+id/progress_name"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="@dimen/content_padding_small"
            android:layout_marginRight="@dimen/content_padding_small"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/field_name"
            app:layout_constraintEnd_toEndOf="@id/field_name"
            app:layout_constraintTop_toTopOf="@id/field_name"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/field_rival_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding_med"
            android:hint="@string/field_hint_rival_code"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="9"
            android:nextFocusDown="@id/field_twitter"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/field_twitter"
            app:layout_constraintEnd_toEndOf="@id/field_name"
            app:layout_constraintStart_toStartOf="@id/field_name"
            app:layout_constraintTop_toBottomOf="@id/field_name"/>

        <EditText
            android:id="@+id/field_twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding_med"
            android:hint="@string/field_hint_twitter"
            android:importantForAutofill="no"
            android:inputType="text"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/radio_group_rank_method"
            app:layout_constraintEnd_toEndOf="@id/field_name"
            app:layout_constraintStart_toStartOf="@id/field_name"
            app:layout_constraintTop_toBottomOf="@id/field_rival_code"/>

        <RadioGroup
            android:id="@+id/radio_group_rank_method"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_padding_large"
            app:layout_constraintBottom_toTopOf="@id/button_continue"
            app:layout_constraintEnd_toEndOf="@id/field_name"
            app:layout_constraintStart_toStartOf="@id/field_name"
            app:layout_constraintTop_toBottomOf="@id/field_twitter">

            <RadioButton
                android:id="@+id/radio_method_placement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_padding_small"
                android:text="@string/intro_rank_method_placement"/>

            <RadioButton
                android:id="@+id/radio_method_selection"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/content_padding_small"
                android:text="@string/intro_rank_method_selection"/>

            <RadioButton
                android:id="@+id/radio_method_no_rank"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intro_rank_method_no_rank"/>
        </RadioGroup>

        <Button
            android:id="@+id/button_continue"
            style="@style/BottomProgressButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSignInClicked"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
