<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.firstrun.PlacementListActivity">

    <TextView
        android:id="@+id/text_placement_directions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_padding_large"
        android:text="@string/placement_overview"
        app:layout_constraintBottom_toTopOf="@id/recycler_placements"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_placements"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/button_ranks"
        app:layout_constraintTop_toBottomOf="@id/text_placement_directions" />

    <Button
        android:id="@+id/button_ranks"
        style="@style/BottomProgressButtonRightBorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/rank_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_no_rank"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/button_no_rank"
        style="@style/BottomProgressButtonLeftBorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/start_no_rank"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_ranks"/>

</androidx.constraintlayout.widget.ConstraintLayout>
