<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/content_padding_med"
        app:layout_constraintBottom_toTopOf="@id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:background="@color/colorAccent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="field_score,field_ex"/>

    <EditText
        android:id="@+id/field_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_padding_med"
        android:hint="@string/score"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/button_done"
        app:layout_constraintEnd_toStartOf="@id/field_ex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <EditText
        android:id="@+id/field_ex"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_padding_med"
        android:hint="@string/ex_score"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/button_done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/field_score"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <Button
        android:id="@+id/button_retake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/content_padding_med"
        android:layout_marginBottom="@dimen/content_padding_med"
        android:text="@string/retake_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_done"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/content_padding_med"
        android:text="@string/use_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_retake" />

</androidx.constraintlayout.widget.ConstraintLayout>