<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/field_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/content_padding_huge"
        android:layout_marginTop="@dimen/content_padding_large"
        android:layout_marginEnd="@dimen/content_padding_huge"
        android:hint="@string/field_hint_dancer_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:nextFocusDown="@id/field_rival_code"
        android:singleLine="true"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/field_rival_code"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progress_name"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="@dimen/content_padding_small"
        android:layout_marginBottom="2dp"
        android:layout_weight="1"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/field_name"
        app:layout_constraintEnd_toEndOf="@id/field_name"
        app:layout_constraintTop_toTopOf="@id/field_name"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/field_rival_code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_padding_med"
        android:hint="@string/field_hint_rival_code"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        android:nextFocusDown="@id/field_twitter"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@id/field_twitter"
        app:layout_constraintEnd_toEndOf="@id/field_name"
        app:layout_constraintStart_toStartOf="@id/field_name"
        app:layout_constraintTop_toBottomOf="@id/field_name"/>

    <EditText
        android:id="@+id/field_twitter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_padding_med"
        android:hint="@string/field_hint_twitter"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/field_name"
        app:layout_constraintStart_toStartOf="@id/field_name"
        app:layout_constraintTop_toBottomOf="@id/field_rival_code"/>

</androidx.constraintlayout.widget.ConstraintLayout>