<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.perrigogames.life4trials.activity.SingleSongTournamentActivity"
    tools:showIn="@layout/activity_single_song_tournament">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_tournament_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_padding_huge"
        android:fontFamily="@font/avenir"
        android:gravity="center"
        android:lines="1"
        android:text="@string/title_single_song_tournament"
        android:textAllCaps="true"
        android:textSize="28sp"
        app:autoSizeMinTextSize="20sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/text_tournament_directions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_tournament_directions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/content_padding_huge"
        android:layout_marginTop="@dimen/content_padding_large"
        android:layout_marginRight="@dimen/content_padding_huge"
        android:gravity="center"
        android:text="@string/single_song_tournament_directions"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_tournament_title"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_album_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_album_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <include
        android:id="@+id/view_song_details"
        layout="@layout/item_song_tile_item"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/button_submit"
        app:layout_constraintEnd_toEndOf="@id/guideline_album_end"
        app:layout_constraintStart_toStartOf="@id/guideline_album_start"
        app:layout_constraintTop_toBottomOf="@id/text_tournament_directions"/>

    <Button
        android:id="@+id/button_submit"
        style="@style/BottomProgressButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
